Use gear icon for editing sections and layouts. Fix edit bar content alignment

--- a/resources/gato-component-sections/css/section.scss
+++ b/resources/gato-component-sections/css/section.scss
@@ -3,3 +3,8 @@
     text-align: center;
   }
 }
+
+.megasection-bar > .mgnlEditorBar.component .mgnlEditorBarButtons .editorIcon.icon-edit:before {
+  font-family: 'FontAwesome';
+  content: "\f013";
+}
