--- a/resources/gato-template/css/sections.scss
+++ b/resources/gato-template/css/sections.scss
@@ -69,6 +69,11 @@
   }
 }
 
+.section-bar > .mgnlEditorBar.component .mgnlEditorBarButtons .editorIcon.icon-edit:before {
+  font-family: 'FontAwesome';
+  content: "\f013";
+}
+
 .layout-column {
   @extend .grid-cell;
   &.full {
